ndtech-k8s-cluster/ndtech/networking/ndtech-jaackdreality-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaackdreality-com
  namespace: ndtech
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jaackdreality.com, www.jaackdreality.com, tekton.jaackdreality.com
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - secretName: letsencrypt
      hosts:
        - jaackdreality.com
        - www.jaackdreality.com
        - tekton.jaackdreality.com
  rules:
    - host: jaackdreality.com
      http:
        paths:
          - backend:
             service:
              name: ndtech-sapper
              port:
                number: 80
            path: /
            pathType: ImplementationSpecific
    - host: www.jaackdreality.com
      http:
        paths:
          - backend:
             service:
              name: ndtech-sapper
              port:
                number: 80
            path: /
            pathType: ImplementationSpecific
    - host: tekton.jaackdreality.com
      http:
        paths:
          - backend:
             service:
              name: el-getting-started-listener
              port:
                number: 8080
            path: /
            pathType: ImplementationSpecific
